y.output
Terminals unused in grammar

    DO
    LSB
    RSB


State 191 conflicts: 17 shift/reduce
State 194 conflicts: 13 shift/reduce
State 195 conflicts: 13 shift/reduce
State 196 conflicts: 13 shift/reduce
State 197 conflicts: 13 shift/reduce
State 198 conflicts: 13 shift/reduce
State 199 conflicts: 13 shift/reduce
State 200 conflicts: 13 shift/reduce
State 201 conflicts: 13 shift/reduce
State 202 conflicts: 13 shift/reduce
State 203 conflicts: 13 shift/reduce
State 204 conflicts: 13 shift/reduce
State 205 conflicts: 13 shift/reduce
State 206 conflicts: 13 shift/reduce


Grammar

    0 $accept: prm $end

    1 $@1: %empty

    2 $@2: %empty

    3 prm: PRM1 PRM2 $@1 STATEMENTS PRM3 $@2 AFTER

    4 AFTER: FUNC_STMT AFTER
    5      | INL_STMT AFTER
    6      | %empty

    7 STATEMENTS: STATEMENTS STATEMENT
    8           | STATEMENT

    9 STATEMENT: DATA_TYPE VAR_LIST END
   10          | INP LB READ_VAR_LIST RB END
   11          | DICT LT DATA_TYPE GT VAR LB DIGIT1 RB END
   12          | DICT LT DATA_TYPE GT VAR LB DIGIT1 RB LB DIGIT1 RB END

   13 $@3: %empty

   14 $@4: %empty

   15 STATEMENT: VAR $@3 EQ $@4 EQ_RHS END
   16          | PTR_STMT
   17          | NEW_STMT
   18          | IF_STMT ELSEIF_STMT ELSE_STMT
   19          | IF_STMT IFEND
   20          | GOTO VAR CLN
   21          | VAR DS
   22          | WHILE_STMT WHILEEND

   23 $@5: %empty

   24 $@6: %empty

   25 $@7: %empty

   26 STATEMENT: REPEAT $@5 STATEMENTS $@6 UNTIL LB $@7 A_EXPN RB CLN

   27 $@8: %empty

   28 $@9: %empty

   29 STATEMENT: FOR VAR FROM DIGIT1 TO DIGIT1 BY DIGIT1 CLN $@8 STATEMENTS $@9 FOREND
   30          | OUT LB OUT_STMT RB END

   31 $@10: %empty

   32 STATEMENT: VAR LB $@10 CALL_PARA RB END
   33          | SLC
   34          | MLC

   35 $@11: %empty

   36 $@12: %empty

   37 IF_STMT: IF LB $@11 A_EXPN RB CLN $@12 STATEMENTS

   38 ELSEIF_STMT: ELSEIF_STMT ELSEIF_STMT1
   39            | %empty

   40 $@13: %empty

   41 $@14: %empty

   42 ELSEIF_STMT1: ELSEIF LB $@13 A_EXPN RB CLN $@14 STATEMENTS

   43 $@15: %empty

   44 ELSE_STMT: ELSE CLN $@15 STATEMENTS

   45 $@16: %empty

   46 $@17: %empty

   47 WHILE_STMT: WHILE LB $@16 A_EXPN RB CLN $@17 STATEMENTS

   48 $@18: %empty

   49 READ_VAR_LIST: VAR $@18 COMMA READ_VAR_LIST
   50              | VAR

   51 DATA_TYPE: NUM1
   52          | NUM2
   53          | STRING
   54          | BOOL
   55          | VAR

   56 $@19: %empty

   57 VAR_LIST: VAR $@19 COMMA VAR_LIST
   58         | VAR

   59 EQ_RHS: A_EXPN
   60       | STR_EQ

   61 $@20: %empty

   62 A_EXPN: A_EXPN AND $@20 A_EXPN

   63 $@21: %empty

   64 A_EXPN: A_EXPN OR $@21 A_EXPN

   65 $@22: %empty

   66 A_EXPN: NOT LB $@22 A_EXPN RB

   67 $@23: %empty

   68 A_EXPN: A_EXPN LT $@23 A_EXPN

   69 $@24: %empty

   70 A_EXPN: A_EXPN GT $@24 A_EXPN

   71 $@25: %empty

   72 A_EXPN: A_EXPN LE $@25 A_EXPN

   73 $@26: %empty

   74 A_EXPN: A_EXPN GE $@26 A_EXPN

   75 $@27: %empty

   76 A_EXPN: A_EXPN ET $@27 A_EXPN

   77 $@28: %empty

   78 A_EXPN: A_EXPN NE $@28 A_EXPN

   79 $@29: %empty

   80 A_EXPN: A_EXPN ADD $@29 A_EXPN

   81 $@30: %empty

   82 A_EXPN: A_EXPN MIN $@30 A_EXPN

   83 $@31: %empty

   84 A_EXPN: A_EXPN MULT $@31 A_EXPN

   85 $@32: %empty

   86 A_EXPN: A_EXPN DIV $@32 A_EXPN

   87 $@33: %empty

   88 A_EXPN: A_EXPN MOD $@33 A_EXPN
   89       | END_A_EXPN

   90 $@34: %empty

   91 STR_EQ: LCB SQUOTE $@34 STR_EQ1 RCB

   92 $@35: %empty

   93 STR_EQ: LCB DIGIT1 $@35 STR_EQ1 RCB

   94 $@36: %empty

   95 STR_EQ: LCB DIGIT2 $@36 STR_EQ1 RCB

   96 STR_EQ1: STR_EQ2 STR_EQ4

   97 STR_EQ2: %empty
   98        | STR_EQ3

   99 STR_EQ3: COMMA
  100        | CLN

  101 $@37: %empty

  102 STR_EQ4: SQUOTE $@37 STR_EQ1

  103 $@38: %empty

  104 STR_EQ4: DIGIT1 $@38 STR_EQ1

  105 $@39: %empty

  106 STR_EQ4: DIGIT2 $@39 STR_EQ1
  107        | %empty

  108 END_A_EXPN: VAR
  109           | SQUOTE
  110           | DIGIT1
  111           | DIGIT2
  112           | TRUE
  113           | FALSE

  114 $@40: %empty

  115 OUT_STMT: VAR $@40 COMMA VAR_MORE
  116         | DQUOTE
  117         | VAR_MORE

  118 VAR_MORE: VAR

  119 $@41: %empty

  120 $@42: %empty

  121 $@43: %empty

  122 FUNC_STMT: DATA_TYPE VAR LB $@41 DEF_PARA RB CLN $@42 STATEMENTS RET $@43 A_EXPN END

  123 $@44: %empty

  124 INL_STMT: INLFUNC $@44 FUNC_STMT

  125 $@45: %empty

  126 PTR_STMT: DATA_TYPE POINTER VAR EQ AT VAR COMMA $@45 PTR_STMT1 END
  127         | POINTER VAR EQ DIGIT1 END
  128         | POINTER VAR EQ DIGIT2 END
  129         | POINTER VAR EQ SQUOTE END

  130 $@46: %empty

  131 PTR_STMT1: VAR EQ AT VAR COMMA $@46 PTR_STMT1
  132          | VAR EQ AT VAR

  133 $@47: %empty

  134 NEW_STMT: NEW $@47 DATA_TYPE VAR END

  135 CALL_PARA: CALL_PARA COMMA VAR
  136          | CALL_PARA COMMA DIGIT1
  137          | CALL_PARA COMMA DIGIT2
  138          | CALL_PARA COMMA SQUOTE
  139          | CALL_PARA COMMA TRUE
  140          | CALL_PARA COMMA FALSE
  141          | VAR
  142          | DIGIT1
  143          | DIGIT2
  144          | SQUOTE
  145          | TRUE
  146          | FALSE
  147          | %empty

  148 $@48: %empty

  149 DEF_PARA: DATA_TYPE VAR COMMA $@48 DEF_PARA
  150         | DATA_TYPE VAR
  151         | %empty


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PRM1 (258) 3
    PRM2 (259) 3
    PRM3 (260) 3
    END (261) 9 10 11 12 15 30 32 122 126 127 128 129 134
    EQ (262) 15 126 127 128 129 131 132
    COMMA (263) 49 57 99 115 126 131 135 136 137 138 139 140 149
    DIGIT1 <var_name> (264) 11 12 29 93 104 110 127 136 142
    DIGIT2 <var_name> (265) 95 106 111 128 137 143
    ADD (266) 80
    MIN (267) 82
    MULT (268) 84
    DIV (269) 86
    MOD (270) 88
    SLC (271) 33
    MLC (272) 34
    LT (273) 11 12 68
    GT (274) 11 12 70
    LE (275) 72
    GE (276) 74
    ET (277) 76
    NE (278) 78
    AND (279) 62
    OR (280) 64
    NOT (281) 66
    LB (282) 10 11 12 26 30 32 37 42 47 66 122
    RB (283) 10 11 12 26 30 32 37 42 47 66 122
    TRUE (284) 112 139 145
    FALSE (285) 113 140 146
    IF (286) 37
    ELSEIF (287) 42
    ELSE (288) 44
    CLN (289) 20 26 29 37 42 44 47 100 122
    GOTO (290) 20
    DS (291) 21
    WHILE (292) 47
    DO (293)
    IFEND (294) 19
    WHILEEND (295) 22
    REPEAT (296) 26
    UNTIL (297) 26
    FOR (298) 29
    FROM (299) 29
    TO (300) 29
    BY (301) 29
    FOREND (302) 29
    VAR <var_name> (303) 11 12 15 20 21 29 32 49 50 55 57 58 108 115 118 122 126 127 128 129 131 132 134 135 141 149 150
    SQUOTE (304) 91 102 109 129 138 144
    DQUOTE (305) 116
    INP (306) 10
    OUT (307) 30
    RET (308) 122
    INLFUNC (309) 124
    POINTER (310) 126 127 128 129
    AT (311) 126 131 132
    NEW (312) 134
    LSB (313)
    RSB (314)
    DICT (315) 11 12
    LCB (316) 91 93 95
    RCB (317) 91 93 95
    NUM1 <data_type> (318) 51
    NUM2 <data_type> (319) 52
    STRING <data_type> (320) 53
    BOOL <data_type> (321) 54


Nonterminals, with rules where they appear

    $accept (67)
        on left: 0
    prm (68)
        on left: 3
        on right: 0
    $@1 (69)
        on left: 1
        on right: 3
    $@2 (70)
        on left: 2
        on right: 3
    AFTER (71)
        on left: 4 5 6
        on right: 3 4 5
    STATEMENTS (72)
        on left: 7 8
        on right: 3 7 26 29 37 42 44 47 122
    STATEMENT (73)
        on left: 9 10 11 12 15 16 17 18 19 20 21 22 26 29 30 32 33 34
        on right: 7 8
    $@3 (74)
        on left: 13
        on right: 15
    $@4 (75)
        on left: 14
        on right: 15
    $@5 (76)
        on left: 23
        on right: 26
    $@6 (77)
        on left: 24
        on right: 26
    $@7 (78)
        on left: 25
        on right: 26
    $@8 (79)
        on left: 27
        on right: 29
    $@9 (80)
        on left: 28
        on right: 29
    $@10 (81)
        on left: 31
        on right: 32
    IF_STMT (82)
        on left: 37
        on right: 18 19
    $@11 (83)
        on left: 35
        on right: 37
    $@12 (84)
        on left: 36
        on right: 37
    ELSEIF_STMT (85)
        on left: 38 39
        on right: 18 38
    ELSEIF_STMT1 (86)
        on left: 42
        on right: 38
    $@13 (87)
        on left: 40
        on right: 42
    $@14 (88)
        on left: 41
        on right: 42
    ELSE_STMT (89)
        on left: 44
        on right: 18
    $@15 (90)
        on left: 43
        on right: 44
    WHILE_STMT (91)
        on left: 47
        on right: 22
    $@16 (92)
        on left: 45
        on right: 47
    $@17 (93)
        on left: 46
        on right: 47
    READ_VAR_LIST (94)
        on left: 49 50
        on right: 10 49
    $@18 (95)
        on left: 48
        on right: 49
    DATA_TYPE <data_type> (96)
        on left: 51 52 53 54 55
        on right: 9 11 12 122 126 134 149 150
    VAR_LIST (97)
        on left: 57 58
        on right: 9 57
    $@19 (98)
        on left: 56
        on right: 57
    EQ_RHS (99)
        on left: 59 60
        on right: 15
    A_EXPN (100)
        on left: 62 64 66 68 70 72 74 76 78 80 82 84 86 88 89
        on right: 26 37 42 47 59 62 64 66 68 70 72 74 76 78 80 82 84 86 88 122
    $@20 (101)
        on left: 61
        on right: 62
    $@21 (102)
        on left: 63
        on right: 64
    $@22 (103)
        on left: 65
        on right: 66
    $@23 (104)
        on left: 67
        on right: 68
    $@24 (105)
        on left: 69
        on right: 70
    $@25 (106)
        on left: 71
        on right: 72
    $@26 (107)
        on left: 73
        on right: 74
    $@27 (108)
        on left: 75
        on right: 76
    $@28 (109)
        on left: 77
        on right: 78
    $@29 (110)
        on left: 79
        on right: 80
    $@30 (111)
        on left: 81
        on right: 82
    $@31 (112)
        on left: 83
        on right: 84
    $@32 (113)
        on left: 85
        on right: 86
    $@33 (114)
        on left: 87
        on right: 88
    STR_EQ (115)
        on left: 91 93 95
        on right: 60
    $@34 (116)
        on left: 90
        on right: 91
    $@35 (117)
        on left: 92
        on right: 93
    $@36 (118)
        on left: 94
        on right: 95
    STR_EQ1 (119)
        on left: 96
        on right: 91 93 95 102 104 106
    STR_EQ2 (120)
        on left: 97 98
        on right: 96
    STR_EQ3 (121)
        on left: 99 100
        on right: 98
    STR_EQ4 (122)
        on left: 102 104 106 107
        on right: 96
    $@37 (123)
        on left: 101
        on right: 102
    $@38 (124)
        on left: 103
        on right: 104
    $@39 (125)
        on left: 105
        on right: 106
    END_A_EXPN (126)
        on left: 108 109 110 111 112 113
        on right: 89
    OUT_STMT (127)
        on left: 115 116 117
        on right: 30
    $@40 (128)
        on left: 114
        on right: 115
    VAR_MORE (129)
        on left: 118
        on right: 115 117
    FUNC_STMT (130)
        on left: 122
        on right: 4 124
    $@41 (131)
        on left: 119
        on right: 122
    $@42 (132)
        on left: 120
        on right: 122
    $@43 (133)
        on left: 121
        on right: 122
    INL_STMT (134)
        on left: 124
        on right: 5
    $@44 (135)
        on left: 123
        on right: 124
    PTR_STMT (136)
        on left: 126 127 128 129
        on right: 16
    $@45 (137)
        on left: 125
        on right: 126
    PTR_STMT1 (138)
        on left: 131 132
        on right: 126 131
    $@46 (139)
        on left: 130
        on right: 131
    NEW_STMT (140)
        on left: 134
        on right: 17
    $@47 (141)
        on left: 133
        on right: 134
    CALL_PARA (142)
        on left: 135 136 137 138 139 140 141 142 143 144 145 146 147
        on right: 32 135 136 137 138 139 140
    DEF_PARA (143)
        on left: 149 150 151
        on right: 122 149
    $@48 (144)
        on left: 148
        on right: 149


State 0

    0 $accept: . prm $end

    PRM1  shift, and go to state 1

    prm  go to state 2


State 1

    3 prm: PRM1 . PRM2 $@1 STATEMENTS PRM3 $@2 AFTER

    PRM2  shift, and go to state 3


State 2

    0 $accept: prm . $end

    $end  shift, and go to state 4


State 3

    3 prm: PRM1 PRM2 . $@1 STATEMENTS PRM3 $@2 AFTER

    $default  reduce using rule 1 ($@1)

    $@1  go to state 5


State 4

    0 $accept: prm $end .

    $default  accept


State 5

    3 prm: PRM1 PRM2 $@1 . STATEMENTS PRM3 $@2 AFTER

    SLC      shift, and go to state 6
    MLC      shift, and go to state 7
    IF       shift, and go to state 8
    GOTO     shift, and go to state 9
    WHILE    shift, and go to state 10
    REPEAT   shift, and go to state 11
    FOR      shift, and go to state 12
    VAR      shift, and go to state 13
    INP      shift, and go to state 14
    OUT      shift, and go to state 15
    POINTER  shift, and go to state 16
    NEW      shift, and go to state 17
    DICT     shift, and go to state 18
    NUM1     shift, and go to state 19
    NUM2     shift, and go to state 20
    STRING   shift, and go to state 21
    BOOL     shift, and go to state 22

    STATEMENTS  go to state 23
    STATEMENT   go to state 24
    IF_STMT     go to state 25
    WHILE_STMT  go to state 26
    DATA_TYPE   go to state 27
    PTR_STMT    go to state 28
    NEW_STMT    go to state 29


State 6

   33 STATEMENT: SLC .

    $default  reduce using rule 33 (STATEMENT)


State 7

   34 STATEMENT: MLC .

    $default  reduce using rule 34 (STATEMENT)


State 8

   37 IF_STMT: IF . LB $@11 A_EXPN RB CLN $@12 STATEMENTS

    LB  shift, and go to state 30


State 9

   20 STATEMENT: GOTO . VAR CLN

    VAR  shift, and go to state 31


State 10

   47 WHILE_STMT: WHILE . LB $@16 A_EXPN RB CLN $@17 STATEMENTS

    LB  shift, and go to state 32


State 11

   26 STATEMENT: REPEAT . $@5 STATEMENTS $@6 UNTIL LB $@7 A_EXPN RB CLN

    $default  reduce using rule 23 ($@5)

    $@5  go to state 33


State 12

   29 STATEMENT: FOR . VAR FROM DIGIT1 TO DIGIT1 BY DIGIT1 CLN $@8 STATEMENTS $@9 FOREND

    VAR  shift, and go to state 34


State 13

   15 STATEMENT: VAR . $@3 EQ $@4 EQ_RHS END
   21          | VAR . DS
   32          | VAR . LB $@10 CALL_PARA RB END
   55 DATA_TYPE: VAR .

    LB  shift, and go to state 35
    DS  shift, and go to state 36

    EQ        reduce using rule 13 ($@3)
    $default  reduce using rule 55 (DATA_TYPE)

    $@3  go to state 37


State 14

   10 STATEMENT: INP . LB READ_VAR_LIST RB END

    LB  shift, and go to state 38


State 15

   30 STATEMENT: OUT . LB OUT_STMT RB END

    LB  shift, and go to state 39


State 16

  127 PTR_STMT: POINTER . VAR EQ DIGIT1 END
  128         | POINTER . VAR EQ DIGIT2 END
  129         | POINTER . VAR EQ SQUOTE END

    VAR  shift, and go to state 40


State 17

  134 NEW_STMT: NEW . $@47 DATA_TYPE VAR END

    $default  reduce using rule 133 ($@47)

    $@47  go to state 41


State 18

   11 STATEMENT: DICT . LT DATA_TYPE GT VAR LB DIGIT1 RB END
   12          | DICT . LT DATA_TYPE GT VAR LB DIGIT1 RB LB DIGIT1 RB END

    LT  shift, and go to state 42


State 19

   51 DATA_TYPE: NUM1 .

    $default  reduce using rule 51 (DATA_TYPE)


State 20

   52 DATA_TYPE: NUM2 .

    $default  reduce using rule 52 (DATA_TYPE)


State 21

   53 DATA_TYPE: STRING .

    $default  reduce using rule 53 (DATA_TYPE)


State 22

   54 DATA_TYPE: BOOL .

    $default  reduce using rule 54 (DATA_TYPE)


State 23

    3 prm: PRM1 PRM2 $@1 STATEMENTS . PRM3 $@2 AFTER
    7 STATEMENTS: STATEMENTS . STATEMENT

    PRM3     shift, and go to state 43
    SLC      shift, and go to state 6
    MLC      shift, and go to state 7
    IF       shift, and go to state 8
    GOTO     shift, and go to state 9
    WHILE    shift, and go to state 10
    REPEAT   shift, and go to state 11
    FOR      shift, and go to state 12
    VAR      shift, and go to state 13
    INP      shift, and go to state 14
    OUT      shift, and go to state 15
    POINTER  shift, and go to state 16
    NEW      shift, and go to state 17
    DICT     shift, and go to state 18
    NUM1     shift, and go to state 19
    NUM2     shift, and go to state 20
    STRING   shift, and go to state 21
    BOOL     shift, and go to state 22

    STATEMENT   go to state 44
    IF_STMT     go to state 25
    WHILE_STMT  go to state 26
    DATA_TYPE   go to state 27
    PTR_STMT    go to state 28
    NEW_STMT    go to state 29


State 24

    8 STATEMENTS: STATEMENT .

    $default  reduce using rule 8 (STATEMENTS)


State 25

   18 STATEMENT: IF_STMT . ELSEIF_STMT ELSE_STMT
   19          | IF_STMT . IFEND

    IFEND  shift, and go to state 45

    $default  reduce using rule 39 (ELSEIF_STMT)

    ELSEIF_STMT  go to state 46


State 26

   22 STATEMENT: WHILE_STMT . WHILEEND

    WHILEEND  shift, and go to state 47


State 27

    9 STATEMENT: DATA_TYPE . VAR_LIST END
  126 PTR_STMT: DATA_TYPE . POINTER VAR EQ AT VAR COMMA $@45 PTR_STMT1 END

    VAR      shift, and go to state 48
    POINTER  shift, and go to state 49

    VAR_LIST  go to state 50


State 28

   16 STATEMENT: PTR_STMT .

    $default  reduce using rule 16 (STATEMENT)


State 29

   17 STATEMENT: NEW_STMT .

    $default  reduce using rule 17 (STATEMENT)


State 30

   37 IF_STMT: IF LB . $@11 A_EXPN RB CLN $@12 STATEMENTS

    $default  reduce using rule 35 ($@11)

    $@11  go to state 51


State 31

   20 STATEMENT: GOTO VAR . CLN

    CLN  shift, and go to state 52


State 32

   47 WHILE_STMT: WHILE LB . $@16 A_EXPN RB CLN $@17 STATEMENTS

    $default  reduce using rule 45 ($@16)

    $@16  go to state 53


State 33

   26 STATEMENT: REPEAT $@5 . STATEMENTS $@6 UNTIL LB $@7 A_EXPN RB CLN
